VR: Sending the fling event to the right target

Fling event is sent to the same target that the last scroll event
was sent to.

BUG=698260

Review-Url: https://codereview.chromium.org/2808723003
Cr-Commit-Position: refs/heads/master@{#464419}

Former-commit-id: 7887732326e9a545585ece8147cd2fe88a080f01